Add Validation-Message Component

--- a/RegistrationForm/src/app/app.component.html
+++ b/RegistrationForm/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-user-registration> </app-user-registration>
+<app-validation-message> </app-validation-message>
 <router-outlet></router-outlet>
