--- a/RegistrationForm/src/app/components/user-registration/user-registration.component.html
+++ b/RegistrationForm/src/app/components/user-registration/user-registration.component.html
@@ -5,37 +5,20 @@
     <div class="ui-inputgroup">
       <span class="ui-inputgroup-addon"><i class="pi pi-user" style="line-height: 1.25;"></i></span>
       <input type="text" pInputText placeholder="Username" formControlName="userName">
-        <div class="error" *ngIf="isControlInvalid('userName')">
-          Имя не может быть пустым и содержать цифры
-        </div>
     </div>
+  <app-validation-message controlName="userName"> </app-validation-message>
 
     <div class="ui-inputgroup">
       <span class="ui-inputgroup-addon">@</span>
       <input type="text" pInputText placeholder="Email" formControlName="userEmail">
     </div>
-    <div class="error" *ngIf="isControlInvalid('userEmail')">
-      <div *ngIf="myReactiveForm.get('userEmail').errors['required']">
-        Электронный адрес не может быть пустым
-      </div>
-      <div *ngIf="myReactiveForm.get('userEmail').errors['email']">
-        Некорректный адрес электронной почты
-      </div>
-    </div>
+  <app-validation-message controlName="userEmail"> </app-validation-message>
 
     <div class="ui-inputgroup">
       <span class="ui-inputgroup-addon"><i class="pi pi-key" style="line-height: 1.25;"></i></span>
       <input type="password" pInputText pPassword [weakLabel]="weakPasswordText" formControlName="userPassword"/>
     </div>
-    <div class="error" *ngIf="isControlInvalid('userPassword')">
-      <div *ngIf="myReactiveForm.get('userPassword').errors['required']">
-        Поле не может быть пустым
-      </div>
-      <div *ngIf="myReactiveForm.get('userPassword').errors['minlength']">
-        Минимальная длина пароля 8 символов
-      </div>
-      {{ myReactiveForm.get('userPassword').errors | json }}
-    </div>
+  <app-validation-message controlName="userPassword"> </app-validation-message>
 
 <button type="submit" class="btn btn-info">Register</button>
 </form>
